<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SplashActivity"
    android:background="@color/base_color"
    android:orientation="vertical"
    android:id="@+id/root_layout"
    >
    <ImageView
        android:id="@+id/ic_app"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ic_app"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/appName"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_bio"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:layout_marginBottom="50dp"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bio"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        />

</RelativeLayout>