<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="340dp"
    android:layoutDirection="rtl"
    android:background="@color/base_color">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover_pass_title"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_login_register_field"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_email_24"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:autofillHints="emailAddress" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/recovery_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login_register_btn"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/recover_pass"
        />

</LinearLayout>