<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:id="@+id/root_layout"
    android:background="@color/base_color"
    tools:context=".views.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/btn_register"
            android:layout_toEndOf="@id/ic_back"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_login_register_field"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_supervised_user_circle_24"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:importantForAutofill="no" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_login_register_field"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_email_24"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:autofillHints="emailAddress" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_login_register_field"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_password_24"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:autofillHints="password" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_login_register_field"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_password_24"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/editText_rePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/rePassword"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:autofillHints="password" />
    </androidx.cardview.widget.CardView>
    <CheckBox
        android:id="@+id/checkbox_showPass"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkBoxText"
        android:textColor="@color/white"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_login_register_btn"
        android:layout_marginTop="20dp"
        android:text="@string/btn_register"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialogMassage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginText"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:layout_toEndOf="@+id/dialogMassage"
            android:layout_marginStart="5dp"
            android:layout_marginTop="17dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </RelativeLayout>
</LinearLayout>