<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:background="@color/base_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_login_register_field"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_email_24"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:autofillHints="emailAddress" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_login_register_field"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_password_24"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:autofillHints="password" />
    </androidx.cardview.widget.CardView>
    <CheckBox
        android:id="@+id/checkbox_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkBoxText"
        android:textColor="@color/white"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >
        <Button
            android:id="@+id/logout"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_register_btn"
            android:text="@string/btn_logout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/back"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_register_btn"
            android:backgroundTint="@color/bg_btnPlay"
            android:text="@string/btn_back"
            android:layout_toStartOf="@id/logout"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</LinearLayout>