<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SearchActivity"
    android:background="@color/base_color"
    android:layoutDirection="rtl">

    <RelativeLayout
        android:id="@+id/appbar_search"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/base_color"
        >
        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appbar_search"
            android:layout_toEndOf="@id/ic_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar_search"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_filter"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/btn_filter"
            android:background="@color/name_genre_color"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toEndOf="@id/textInputLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignBaseline="@id/textInputLayout"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayout"
            android:scrollbars="none"
            >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            />
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>